// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select has mobile styles 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c5 {
  background-color: #fff;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c6 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 28px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6:hover,
.c6:focus {
  background-color: #d9dde2;
}

.c1 {
  position: relative;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-1x);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c2:hover {
  cursor: pointer;
}

.c2 svg {
  color: #57666E;
}

.c3 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: calc(1rem - 2px);
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3:focus {
  outline: none;
}

.c4 {
  display: none;
  position: absolute;
  width: 100%;
}

.c4 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    onClick={[Function]}
  >
    <input
      className="c3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      type="text"
      value=""
    />
    <svg
      color="currentColor"
      height="24"
      width="24"
    />
  </div>
  <div
    className="c4"
    open={false}
  >
    <ul
      className="c5"
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <li
        aria-label="Ontario"
        aria-selected={false}
        className="c6"
        id="on-0"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected={false}
        className="c6"
        id="qc-1"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected={false}
        className="c6"
        id="bc-2"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected={false}
        className="c6"
        id="ab-3"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected={false}
        className="c6"
        id="mb-4"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected={false}
        className="c6"
        id="sk-5"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected={false}
        className="c6"
        id="ns-6"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected={false}
        className="c6"
        id="nb-7"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected={false}
        className="c6"
        id="nl-8"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected={false}
        className="c6"
        id="pe-9"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected={false}
        className="c6"
        id="nt-10"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected={false}
        className="c6"
        id="nu-11"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected={false}
        className="c6"
        id="yt-12"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select has no label 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c5 {
  background-color: #fff;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c6 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 28px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6:hover,
.c6:focus {
  background-color: #d9dde2;
}

.c1 {
  position: relative;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
<<<<<<< HEAD
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
=======
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-1x);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c2:hover {
  cursor: pointer;
}

.c2 svg {
  color: #57666E;
}

.c3 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: calc(1rem - 2px);
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3:focus {
  outline: none;
}

.c4 {
  display: none;
  position: absolute;
  width: 100%;
}

.c4 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    onClick={[Function]}
  >
    <input
      className="c3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      required={true}
      type="text"
      value=""
    />
    <svg
      color="currentColor"
      height="24"
      width="24"
    />
  </div>
  <div
    className="c4"
    open={false}
  >
    <ul
      className="c5"
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <li
        aria-label="Ontario"
        aria-selected={false}
        className="c6"
        id="on-0"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected={false}
        className="c6"
        id="qc-1"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected={false}
        className="c6"
        id="bc-2"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected={false}
        className="c6"
        id="ab-3"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected={false}
        className="c6"
        id="mb-4"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected={false}
        className="c6"
        id="sk-5"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected={false}
        className="c6"
        id="ns-6"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected={false}
        className="c6"
        id="nb-7"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected={false}
        className="c6"
        id="nl-8"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected={false}
        className="c6"
        id="pe-9"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected={false}
        className="c6"
        id="nt-10"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected={false}
        className="c6"
        id="nu-11"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected={false}
        className="c6"
        id="yt-12"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select is disabled 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
<<<<<<< HEAD
  margin-left: 0.5rem;
=======
  margin-left: var(--spacing-half);
>>>>>>> Adds CSS variables
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c6 {
  background-color: #fff;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c7 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 28px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #d9dde2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
<<<<<<< HEAD
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
=======
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-1x);
  border: 1px solid #D9DDE2;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: default;
}

.c3 svg {
  color: #9CA7B4;
}

.c4 {
  background-color: #F1F2F2;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: calc(1rem - 2px);
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: default;
}

.c4::-webkit-input-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c2:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px rgba(0,128,165,0.4);
}

<<<<<<< HEAD
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
=======
<<<<<<< HEAD
<<<<<<< HEAD
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
<<<<<<< HEAD
=======
=======
=======
>>>>>>> Adds CSS variables
>>>>>>> Adds CSS variables
.c5 {
  display: none;
  position: absolute;
  width: 100%;
>>>>>>> Renames Dropdown to Select
}

.c5 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

<div
  className="c0 c1"
>
  <label
    className="c2"
  >
    Select an option
  </label>
  <div
    className="c3"
    disabled={true}
  >
    <input
      className="c4"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      required={true}
      type="text"
      value=""
    />
    <svg
      color="currentColor"
      height="24"
      width="24"
    />
  </div>
  <div
    className="c5"
    open={false}
  >
    <ul
      className="c6"
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <li
        aria-label="Ontario"
        aria-selected={false}
        className="c7"
        id="on-0"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected={false}
        className="c7"
        id="qc-1"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected={false}
        className="c7"
        id="bc-2"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected={false}
        className="c7"
        id="ab-3"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected={false}
        className="c7"
        id="mb-4"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected={false}
        className="c7"
        id="sk-5"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected={false}
        className="c7"
        id="ns-6"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected={false}
        className="c7"
        id="nb-7"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected={false}
        className="c7"
        id="nl-8"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected={false}
        className="c7"
        id="pe-9"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected={false}
        className="c7"
        id="nt-10"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected={false}
        className="c7"
        id="nu-11"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected={false}
        className="c7"
        id="yt-12"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select is invalid 1`] = `
Array [
  .c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c8 {
  color: #A40C2E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.25rem;
  margin: var(--spacing-half) 0 0;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #A40C2E;
}

.c0:focus {
  border-color: #A40C2E;
}

.c6 {
  background-color: #fff;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c7 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 28px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #d9dde2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #A40C2E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-1x);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3 svg {
  color: #57666E;
}

.c4 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: calc(1rem - 2px);
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:focus {
  outline: none;
}

.c5 {
  display: none;
  position: absolute;
  width: 100%;
}

.c5 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

<div
    className="c0 c1"
  >
    <label
      className="c2"
    >
      Select an option
    </label>
    <div
      className="c3"
      onClick={[Function]}
    >
      <input
        className="c4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an option"
        required={true}
        type="text"
        value=""
      />
      <svg
        color="currentColor"
        height="24"
        width="24"
      />
    </div>
    <div
      className="c5"
      open={false}
    >
      <ul
        className="c6"
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <li
          aria-label="Ontario"
          aria-selected={false}
          className="c7"
          id="on-0"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Ontario
        </li>
        <li
          aria-label="Quebec"
          aria-selected={false}
          className="c7"
          id="qc-1"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Quebec
        </li>
        <li
          aria-label="British Columbia"
          aria-selected={false}
          className="c7"
          id="bc-2"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          British Columbia
        </li>
        <li
          aria-label="Alberta"
          aria-selected={false}
          className="c7"
          id="ab-3"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Alberta
        </li>
        <li
          aria-label="Manitoba"
          aria-selected={false}
          className="c7"
          id="mb-4"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Manitoba
        </li>
        <li
          aria-label="Saskatchewan"
          aria-selected={false}
          className="c7"
          id="sk-5"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Saskatchewan
        </li>
        <li
          aria-label="Nova Scotia"
          aria-selected={false}
          className="c7"
          id="ns-6"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Nova Scotia
        </li>
        <li
          aria-label="New Brunswick"
          aria-selected={false}
          className="c7"
          id="nb-7"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          New Brunswick
        </li>
        <li
          aria-label="Newfoundland and Labrador"
          aria-selected={false}
          className="c7"
          id="nl-8"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-label="Prince Edward Island"
          aria-selected={false}
          className="c7"
          id="pe-9"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Prince Edward Island
        </li>
        <li
          aria-label="Northwest Territories"
          aria-selected={false}
          className="c7"
          id="nt-10"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Northwest Territories
        </li>
        <li
          aria-label="Nunavut"
          aria-selected={false}
          className="c7"
          id="nu-11"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Nunavut
        </li>
        <li
          aria-label="Yukon"
          aria-selected={false}
          className="c7"
          id="yt-12"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Yukon
        </li>
      </ul>
    </div>
    <div
      aria-live="polite"
      className="c8"
      id="undefined_invalid"
      role="alert"
    >
      You must select an option
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    checked={false}
    className="c0"
    name="undefined_skip"
    onChange={[Function]}
    type="radio"
    value="skip"
  />,
  .c0 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  border-color: #0080A5;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    className="c0"
  >
    Skip this question
  </label>,
]
`;

exports[`Select matches the snapshot 1`] = `
Array [
  .c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c6 {
  background-color: #fff;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c7 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 28px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #d9dde2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> Adds CSS variables
  border: 1px solid #D9DDE2;
<<<<<<< HEAD
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.4rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
  background-position: right 0.75rem center;
  background-repeat: no-repeat;
  background-size: 0.75rem;
  position: relative;
=======
<<<<<<< HEAD
  border-radius: 0.25rem;
=======
=======
=======
>>>>>>> Adds CSS variables
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-1x);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3 svg {
  color: #57666E;
}

.c4 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: calc(1rem - 2px);
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:focus {
  outline: none;
}

<<<<<<< HEAD
.c2:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px rgba(0,128,165,0.4);
=======
.c5 {
  display: none;
  position: absolute;
  width: 100%;
>>>>>>> Renames Dropdown to Select
}

<<<<<<< HEAD
<<<<<<< HEAD
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
<<<<<<< HEAD
=======
  width: 100%;
=======
=======
>>>>>>> Adds CSS variables
.c5 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
<<<<<<< HEAD
>>>>>>> Renames Dropdown to Select
>>>>>>> Renames Dropdown to Select
=======
>>>>>>> Adds CSS variables
}

<div
    className="c0 c1"
  >
    <label
      className="c2"
    >
      Select an option
    </label>
    <div
      className="c3"
      onClick={[Function]}
    >
      <input
        className="c4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an option"
        required={true}
        type="text"
        value=""
      />
      <svg
        color="currentColor"
        height="24"
        width="24"
      />
    </div>
    <div
      className="c5"
      open={false}
    >
      <ul
        className="c6"
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <li
          aria-label="Ontario"
          aria-selected={false}
          className="c7"
          id="on-0"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Ontario
        </li>
        <li
          aria-label="Quebec"
          aria-selected={false}
          className="c7"
          id="qc-1"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Quebec
        </li>
        <li
          aria-label="British Columbia"
          aria-selected={false}
          className="c7"
          id="bc-2"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          British Columbia
        </li>
        <li
          aria-label="Alberta"
          aria-selected={false}
          className="c7"
          id="ab-3"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Alberta
        </li>
        <li
          aria-label="Manitoba"
          aria-selected={false}
          className="c7"
          id="mb-4"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Manitoba
        </li>
        <li
          aria-label="Saskatchewan"
          aria-selected={false}
          className="c7"
          id="sk-5"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Saskatchewan
        </li>
        <li
          aria-label="Nova Scotia"
          aria-selected={false}
          className="c7"
          id="ns-6"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Nova Scotia
        </li>
        <li
          aria-label="New Brunswick"
          aria-selected={false}
          className="c7"
          id="nb-7"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          New Brunswick
        </li>
        <li
          aria-label="Newfoundland and Labrador"
          aria-selected={false}
          className="c7"
          id="nl-8"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-label="Prince Edward Island"
          aria-selected={false}
          className="c7"
          id="pe-9"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Prince Edward Island
        </li>
        <li
          aria-label="Northwest Territories"
          aria-selected={false}
          className="c7"
          id="nt-10"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Northwest Territories
        </li>
        <li
          aria-label="Nunavut"
          aria-selected={false}
          className="c7"
          id="nu-11"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Nunavut
        </li>
        <li
          aria-label="Yukon"
          aria-selected={false}
          className="c7"
          id="yt-12"
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Yukon
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    checked={false}
    className="c0"
    name="undefined_skip"
    onChange={[Function]}
    type="radio"
    value="skip"
  />,
  .c0 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  border-color: #0080A5;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    className="c0"
  >
    Skip this question
  </label>,
]
`;
